8213236: A partial removed/deleted JavaThread cannot transition

Reviewed-by: dholmes, dcubed, eosterlund